[package]
name = "jrnlb"
version = "0.1.0"
authors = ["Kevin Nisbet <kevin@gravitational.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"
flate2 = "1.0.17"
#clap = "3.0.0-beta.2"
structopt = "0.3"
chrono = "0.4.19"
chrono-english = "0.1"

[dev-dependencies]
pretty_assertions = "0.6.1"

[profile.release]
debug = true


